correcting the now visible but super tiny text in confluence

--- a/content/styles/HealthWidget.css
+++ b/content/styles/HealthWidget.css
@@ -193,7 +193,7 @@ div.ui-dialog div.ui-dialog-titlebar span#ui-id-1.ui-dialog-title {
 
 #dialog-confirm,
 #dialog-confirm p {
-    font-size: .7em;
+    font-size: 12px;
     color: white;
 }
 
